tester/src/test/aya/failure/holes/ulf-hole-illtype.aya.txt
In file $FILE:6:29 ->

  4 | def test
  5 |  (F : Set -> Set)
  6 |  (g : Pi (X : F _) -> F (Neg X)) : Nat => g zero
                                   ^^
  
Error: Expected type: Type
       Normalized: Type
       Actual type: F {?_?}
       Normalized: F {?_?}
       They don't match, sorry
Tycking interrupted due to error(s).
What are you doing?
